feat(backend): adding logging for historic changes, adding missing routes and updated functionality to allow more actions for clients/leads/affiliates/campaigns
